# samling

./: CHANGELOG.md  Dockerfile  clorinde.toml  deny.toml  generate-clorinde-file.sh  schema.json
.github/workflows/: main.yml
samling/: Cargo.toml
samling-clorinde/: CHANGELOG.md  Cargo.toml
samling-clorinde/src/: types.rs
samling-clorinde/src/queries/: admin.rs  attribute.rs  attributetype.rs  category.rs  collection.rs  color.rs  group.rs  image.rs  misc.rs  organization.rs  price.rs  pricelist.rs  size.rs  style.rs  user.rs
samling/queries/: style.sql
samling/src/: cli.rs  cloudflare.rs  errors.rs  i18n.rs
samling/src/entity_ref/: external_id.rs  id.rs  slug.rs
samling/src/exports/: expander.rs
samling/src/sizes/: entities.rs
samling/ui/: package-lock.json  package.json
samling/ui/src/: api.ts
samling/ui/src/components/admin/: ExcelCollectionImport.tsx
samling/ui/src/pages/app/admin/: AdminEditCollection.tsx
samling/ui/src/types/: admin.ts  api.ts
