[package]
name = "samling"
version = "0.13.1"
license = "MIT"
edition = "2021"
description = "App for managing apparel collections"
repository = "https://github.com/jacobsvante/samling"
documentation = "https://docs.rs/samling/"
homepage = "https://github.com/jacobsvante/samling"

[dependencies]
samling-clorinde = { version = "0.12.0", path = "../samling-clorinde" }
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "env"], optional = true }
csv = "1.3.1"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
governor = "0.8.1"
http = "1.3.1"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
include_dir = "0.7.4"
indexmap = { version = "2.8.0", features = ["serde"] }
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
mimalloc = { version = "0.1.44", default-features = false, optional = true }
mime = "0.3.17"
mime_guess = "2.0.5"
num_enum = "0.7.3"
once_cell = "1.21.3"
password-hash = { version = "0.5.0", features = ["std"] }
postgres-types = { version = "0.2.9", features = [
    "derive",
    "with-serde_json-1",
] }
rand = "0.8.5"
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
    "json",
    "stream",
    "multipart",
], default-features = false }
rust_decimal = { version = "1.37.1", features = [
    "db-tokio-postgres",
    "db-postgres",
    "serde-with-float",
] }
rust_xlsxwriter = "0.80.0"
schemars = { version = "0.8.22", features = [
    "derive",
    "preserve_order",
    "bytes",
    "url",
    "rust_decimal",
    "chrono",
] }
sentry = { version = "0.36.0", default-features = false, features = [
    "rustls",
    "tracing",
    "backtrace",
    "contexts",
    "panic",
    "tokio",
    "reqwest",
    "tower",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_path_to_error = "0.1.17"
slug = "0.1.6"
smol_str = { version = "0.3.2", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false, features = [
    "signal",
    "macros",
    "rt-multi-thread",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", default-features = false, features = [
    "fs",
    "trace",
    "cors",
    "compression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]
ui = []
