[package]
name = "samling"
version = "0.13.1"
license = "MIT"
edition = "2021"
description = "App for managing apparel collections"
repository = "https://github.com/jacobsvante/samling"
documentation = "https://docs.rs/samling/"
homepage = "https://github.com/jacobsvante/samling"

[dependencies]
samling-clorinde = { version = "0.12.0", path = "../samling-clorinde" }
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
bytes = { version = "1.11.1", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"], optional = true }
csv = "1.4.0"
derive_more = { version = "2.1.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.32"
governor = "0.10.4"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
include_dir = "0.7.4"
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
jsonwebtoken = "10.3.0"
log = "0.4.29"
mimalloc = { version = "0.1.48", default-features = false, optional = true }
mime = "0.3.17"
mime_guess = "2.0.5"
num_enum = "0.7.6"
once_cell = "1.21.4"
password-hash = { version = "0.5.0", features = ["std"] }
postgres-types = { version = "0.2.12", features = [
    "derive",
    "with-serde_json-1",
] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
rust_decimal = { version = "1.40.0", features = [
    "db-tokio-postgres",
    "db-postgres",
    "serde-with-float",
] }
rust_xlsxwriter = "0.94.0"
schemars = { version = "1.2.1", features = [
    "derive",
    "preserve_order",
    "bytes1",
    "url2",
    "rust_decimal1",
    "chrono04",
] }
sentry = { version = "0.47.0", default-features = false, features = [
    "rustls",
    "tracing",
    "backtrace",
    "contexts",
    "panic",
    "tokio",
    "reqwest",
    "tower",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_path_to_error = "0.1.20"
slug = "0.1.6"
smol_str = { version = "0.3.6", features = ["serde"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", default-features = false, features = [
    "signal",
    "macros",
    "rt-multi-thread",
] }
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false, features = [
    "fs",
    "trace",
    "cors",
    "compression-full",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", optional = true }
url = { version = "2.5.8", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]
ui = []
